[metadata]
name = masskit_ai
# version = attr: masskit_ai.VERSION # Get it from the module
version = 1.0
author=Lewis Geer, Douglas Slotta
author_email=lewis.geer@nist.gov
description = AI for mass spec data
# long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = mass spectrometry, science
license = Public Domain
classifiers =
    Programming Language :: Python :: 3


# Using the "src" layout then we need the following
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
exclude =
    masskit_ext*
