[metadata]
name = masskit_ai
# version = attr: massspec.VERSION # Get it from the module
version = 1.0
author=Lewis Geer, Douglas Slotta
author_email=lewis.geer@nist.gov
description = Machine learning submodule for the masskit package.
# long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = mass spectrometry, science, machine learning
license = Public Domain
classifiers =
    Programming Language :: Python :: 3


# Using the "src" layout then we need the following
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    predict_hitlist = masskit_ai.apps.ml.peptide.predict_hitlist:main
    predict = masskit_ai.apps.ml.peptide.predict:main
